--- a/course-modules/_notes/__boilerplates/_newest/boilerplate-pre-reactflix/src/html/template.html
+++ b/course-modules/_notes/__boilerplates/_newest/boilerplate-pre-reactflix/src/html/template.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no' />
 </head>
 <body>
   <div data-js="app"></div>
